<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.ldt.Options$PlaceholderFragment" >

    
    <TextView
        android:id="@+id/option_title"
        android:layout_width="fill_parent"
        android:textSize="24sp"
        android:textColor="#006600"
        android:textStyle="bold"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="24dp"
        android:text="@string/action_settings"
        />
       
    <Button 
        android:id="@+id/map_button"
        android:layout_width="fill_parent"
        android:padding="24dp"
        android:layout_height="wrap_content"
        android:text="@string/goto_map"
        />
    <Button 
        android:id="@+id/hours_beep_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="24dp"
        android:text="@string/goto_hours_beep"
        />
    <Button 
        android:id="@+id/new_user_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="24dp"
        android:text="@string/goto_newuser"
        />
    <Button 
        android:id="@+id/quit_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="24dp"
        android:text="@string/quit"
        />
    <Button 
        android:id="@+id/activate_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="24dp"
        android:background="#CC0000"
        android:text="@string/activate"
        />
    

</LinearLayout>
