<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.ldt.HoursBeepScreen$PlaceholderFragment" >

   <LinearLayout 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
    	android:gravity="center"
    	android:orientation="horizontal"
       >
       
       <TextView 
           android:id="@+id/hours"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_gravity="center"
           android:text="@string/hours"
           />
       
       <NumberPicker
           android:id="@+id/hourPicker"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_gravity="center" />
       
   </LinearLayout>
   
   <LinearLayout 
        android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginLeft="32dp"
    	android:gravity="center"
    	android:orientation="horizontal"
       >
       
       <TextView 
           android:id="@+id/beep_duration"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_gravity="center"
           android:text="@string/beep_duration"
           />
       
       <NumberPicker 
           android:id="@+id/beep_durationPicker"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_gravity="center"
           />
       
   </LinearLayout>
   
   <LinearLayout 
        android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginLeft="38dp"
    	android:gravity="center"
    	android:orientation="horizontal"
       >
       
       <TextView 
           android:id="@+id/beep_volume"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_gravity="center"
           android:text="@string/beep_volume"
           />
       
       <NumberPicker 
           android:id="@+id/beep_volumePicker"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_gravity="center"
           />
       
   </LinearLayout>
   
   <LinearLayout 
       android:layout_width="wrap_content"
           android:layout_height="wrap_content"
    	android:gravity="center"
    	android:orientation="horizontal" >
    	
    	<Button 
    	    android:id="@+id/test_beep_button"
    	    android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/test_beep"
    	    />
    	
    	<Button 
    	    android:id="@+id/return_button"
    	    android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/return_to_options"
    	    />
    	
   </LinearLayout>

</LinearLayout>
